# ghx

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
plugin/ghx_agent_bridge/: __init__.py  __main__.py  bridge.py
skills/ghx/: SKILL.md
skills/ghx/agents/: openai.yaml
src/ghx/: cli.py  headless.py  output.py  paths.py  transport.py
tests/: conftest.py  test_cli_parser.py  test_output.py  test_paths.py  test_transport.py
tests/integration/: conftest.py  test_load_decompile.py
tmp/: Makefile  authd.c  inventory.c  vm32.c
