[project]
name = "ghx"
version = "0.1.0"
description = "Agent-friendly Ghidra CLI with a PyGhidra-backed daemon"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pyghidra>=3.0.2",
    "jpype1>=1.5.2",
    "tiktoken>=0.12.0",
]

[project.scripts]
ghx = "ghx.cli:main"
ghx-agent = "ghx.headless:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that require a real Ghidra install (slow)",
]
addopts = "-m 'not integration'"
